--- a/app.json
+++ b/app.json
@@ -1,5 +1,7 @@
 {
   "pages": [
+    
+    "pages/setRoom/setRoom",
     "pages/my/my",
     "pages/index/index",
     "pages/category/category",
@@ -8,8 +10,7 @@
     "pages/5/5",
     "pages/6/6",
     "pages/player/player",
-    "pages/pusher/pusher",
-    "pages/setRoom/setRoom"
+    "pages/pusher/pusher"
   ],
   "window": {
     "backgroundTextStyle": "light",
