--- a/project.config.json
+++ b/project.config.json
@@ -1,19 +1,22 @@
 {
-	"description": "项目配置文件。",
+	"description": "项目配置文件",
 	"packOptions": {
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.0.4",
-	"appid": "wxd3a3d4ee9ea470d4",
-	"projectname": "zxzb",
+	"libVersion": "2.3.0",
+	"appid": "wx3a21c23a0400ab65",
+	"projectname": "xx",
+	"debugOptions": {
+		"hidedInDevtools": []
+	},
 	"isGameTourist": false,
 	"condition": {
 		"search": {
@@ -24,30 +27,13 @@
 			"current": -1,
 			"list": []
 		},
-		"plugin": {
-			"current": -1,
-			"list": []
-		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
-			"list": [
-				{
-					"id": 0,
-					"name": "player",
-					"pathName": "pages/player/player",
-					"query": ""
-				},
-				{
-					"id": -1,
-					"name": "pusher",
-					"pathName": "pages/pusher/pusher",
-					"query": ""
-				}
-			]
+			"current": -1,
+			"list": []
 		}
 	}
 }
