--- a/project.config.json
+++ b/project.config.json
@@ -12,8 +12,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.3.0",
-	"appid": "wx3a21c23a0400ab65",
-	"projectname": "xx",
+	"appid": "wx58e5a524851d104a",
+	"projectname": "aaa",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
