--- a/app.json
+++ b/app.json
@@ -1,15 +1,16 @@
 {
   "pages": [
-    "pages/my/my",
-    "pages/setRoom/setRoom",
     "pages/index/index",
+    "pages/my/my",
     "pages/category/category",
     "pages/collect/collect",
     "pages/list/list",
     "pages/5/5",
     "pages/6/6",
     "pages/player/player",
-    "pages/pusher/pusher"
+    "pages/pusher/pusher",
+    "pages/setRoom/setRoom",
+    "pages/login/login"
   ],
   "window": {
     "backgroundTextStyle": "light",
