--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#ffd200",
-    "navigationBarTitleText": "教育",
+    "navigationBarTitleText": "直播",
     "navigationBarTextStyle": "#000"
   },
   "tabBar": {
@@ -26,12 +26,6 @@
         "text": "首页",
         "iconPath": "img/1.png",
         "selectedIconPath": "img/11.png"
-      },
-      {
-        "pagePath": "pages/category/category",
-        "text": "分类",
-        "iconPath": "img/2.png",
-        "selectedIconPath": "img/22.png"
       },
       {
         "pagePath": "pages/collect/collect",
