--- a/project.config.json
+++ b/project.config.json
@@ -27,13 +27,66 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
-			"list": []
+			"current": 3,
+			"list": [
+				{
+					"id": -1,
+					"name": "collect",
+					"pathName": "pages/collect/collect",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "player",
+					"pathName": "pages/player/player",
+					"query": ""
+				},
+				{
+					"id": 2,
+					"name": "pusher",
+					"pathName": "pages/pusher/pusher",
+					"query": ""
+				},
+				{
+					"id": 3,
+					"name": "my",
+					"pathName": "pages/my/my",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "setRoom",
+					"pathName": "pages/setRoom/setRoom",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "category",
+					"pathName": "pages/category/category",
+					"query": ""
+				},
+				{
+					"id": 6,
+					"name": "6",
+					"pathName": "pages/6/6",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "5",
+					"pathName": "pages/5/5",
+					"query": ""
+				}
+			]
 		}
 	}
 }
