--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 3,
+			"current": 1,
 			"list": [
 				{
 					"id": -1,
@@ -45,10 +45,10 @@
 					"query": ""
 				},
 				{
-					"id": -1,
+					"id": 1,
 					"name": "player",
 					"pathName": "pages/player/player",
-					"query": ""
+					"query": "id=o1pr70BEvwaV8huWPFP3SFcdAFcM"
 				},
 				{
 					"id": 2,
