--- a/app.json
+++ b/app.json
@@ -10,7 +10,10 @@
     "pages/5/5",
     "pages/6/6",
     "pages/player/player",
-    "pages/login/login"
+    "pages/login/login",
+    "pages/buy/buy",
+    "pages/show/show",
+    "pages/upload/uplod"
   ],
   "window": {
     "backgroundTextStyle": "dark",
