--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 1,
+			"current": -1,
 			"list": [
 				{
 					"id": -1,
@@ -85,6 +85,30 @@
 					"name": "5",
 					"pathName": "pages/5/5",
 					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "buy",
+					"pathName": "pages/buy/buy",
+					"query": "id=o1pr70BEvwaV8huWPFP3SFcdAFcM"
+				},
+				{
+					"id": -1,
+					"name": "list",
+					"pathName": "pages/list/list",
+					"query": "id=o1pr70BEvwaV8huWPFP3SFcdAFcM"
+				},
+				{
+					"id": -1,
+					"name": "show",
+					"pathName": "pages/show/show",
+					"query": "id=o1pr70BEvwaV8huWPFP3SFcdAFcM"
+				},
+				{
+					"id": -1,
+					"name": "uplod",
+					"pathName": "pages/upload/uplod",
+					"query": "id=o1pr70BEvwaV8huWPFP3SFcdAFcM"
 				}
 			]
 		}
