--- a/app.json
+++ b/app.json
@@ -1,6 +1,5 @@
 {
   "pages": [
-    "pages/upload/upload",
     "pages/index/index",
     "pages/pusher/pusher",
     "pages/setRoom/setRoom",
@@ -13,7 +12,8 @@
     "pages/player/player",
     "pages/login/login",
     "pages/buy/buy",
-    "pages/show/show"
+    "pages/show/show",
+    "pages/upload/upload"
   ],
   "window": {
     "backgroundTextStyle": "dark",
