--- a/app.json
+++ b/app.json
@@ -31,6 +31,12 @@
         "selectedIconPath": "img/11.png"
       },
       {
+        "pagePath": "pages/list/list",
+        "text": "视频",
+        "iconPath": "img/2.png",
+        "selectedIconPath": "img/22.png"
+      },
+      {
         "pagePath": "pages/collect/collect",
         "text": "收藏",
         "iconPath": "img/3.png",
