--- a/app.json
+++ b/app.json
@@ -13,7 +13,8 @@
     "pages/login/login",
     "pages/buy/buy",
     "pages/show/show",
-    "pages/upload/upload"
+    "pages/upload/upload",
+    "pages/load"
   ],
   "window": {
     "backgroundTextStyle": "dark",
