--- a/project.config.json
+++ b/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.3.1",
-	"appid": "wxd3a3d4ee9ea470d4",
+	"appid": "wxf346be74a66f8084",
 	"projectname": "zhibo",
 	"debugOptions": {
 		"hidedInDevtools": []
