--- a/project.config.json
+++ b/project.config.json
@@ -36,7 +36,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 13,
+			"current": 14,
 			"list": [
 				{
 					"id": -1,
@@ -119,7 +119,13 @@
 				{
 					"id": -1,
 					"name": "videolist",
-					"pathName": "pages/videolist/videolist"
+					"pathName": "pages/videolist/videolist",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "load",
+					"pathName": "pages/load/load"
 				}
 			]
 		}
